CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(test)

IF(POLICY CMP0017)
  CMAKE_POLICY(SET CMP0017 OLD) # or even better, NEW
ENDIF(POLICY CMP0017)

SET(CMAKE_MODULE_PATH /usr/share/apps/cmake/modules)

INCLUDE(GpgmeFixMe.cmake OPTIONAL)

FIND_PACKAGE(Gpgme)
FIND_PACKAGE(Qt4 COMPONENTS QtCore)
INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(${GPGME_INCLUDES})
LINK_DIRECTORIES(${GPGME_LIBRARY_DIR})

LINK_LIBRARIES(gpgme
  ${GPGME_VANILLA_LIBRARIES}
  #${GPGME_PTH_LIBRARIES}
  #${GPGME_PTHREAD_LIBRARIES}
  qgpgme
  gpgme++
  )

SET(FILES
  gpgme
  #gpgme++
  )

FOREACH(current ${FILES})
  ADD_EXECUTABLE(${current} ${current}.cpp)
  ADD_TEST(${current} ${current})
ENDFOREACH()
