IF(POLICY CMP0017)
  CMAKE_POLICY(SET CMP0017 OLD) # or even better, NEW
ENDIF(POLICY CMP0017)

SET(CMAKE_MODULE_PATH /usr/share/apps/cmake/modules)

INCLUDE(GpgmeFixMe.cmake OPTIONAL)

FIND_PACKAGE(Gpgme)

INCLUDE(CheckIncludeFile)
INCLUDE(CheckFunctionExists)

CHECK_INCLUDE_FILE(poll.h		HAVE_POLL_H)
CHECK_INCLUDE_FILE(sys/poll.h		HAVE_SYS_POLL_H)
CHECK_INCLUDE_FILE(sys/devpoll.h	HAVE_SYS_DEVPOLL_H)
CHECK_INCLUDE_FILE(sys/event.h		HAVE_SYS_EVENT_H)
CHECK_INCLUDE_FILE(dirent.h		HAVE_DIRENT_H)

CHECK_FUNCTION_EXISTS(kqueue HAVE_KQUEUE)
CHECK_FUNCTION_EXISTS(devpoll HAVE_DEVPOLL)
CHECK_FUNCTION_EXISTS(poll HAVE_POLL)
CHECK_FUNCTION_EXISTS(select HAVE_SELECT)

SET(HAVE_INT64T 1)
SET(HAVE_SOCKLENT 1)
SET(HAVE_ATOLL 1)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_DEFINITIONS(-DHAVE_DEFINES_H)
CONFIGURE_FILE(defines.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/defines.h)

FILE(GLOB SOURCES *.c)

EXECUTE_PROCESS(
  COMMAND awk -f ${CMAKE_CURRENT_SOURCE_DIR}/mime_txt2h.awk ${CMAKE_CURRENT_SOURCE_DIR}/mime_encodings.txt
  OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/mime_encodings.h
  )

EXECUTE_PROCESS(
  COMMAND awk -f ${CMAKE_CURRENT_SOURCE_DIR}/mime_txt2h.awk ${CMAKE_CURRENT_SOURCE_DIR}/mime_types.txt
  OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/mime_types.h
  )

LINK_LIBRARIES(
  #gpgme
  ${GPGME_VANILLA_LIBRARIES}
  #${GPGME_PTH_LIBRARIES}
  #${GPGME_PTHREAD_LIBRARIES}
  )

ADD_EXECUTABLE(ludd ${SOURCES})
